Implement enum args (#7)
* Implemented enum args; deprecated and removed hasArg; dealing with booleans appropriately

* Solved version number error

* Updated commons-cli dependency, fixed too lenient behavior with optional args

* Implemented mandatory FALSE value for flags, unless set in the command line

* Some style changes - not collapse imports

* Style changes, improved treatment of version in --help

* Execution context dropped, output goes straight to System.out and System.err

* Updated documentation

* Documentation improvements

* Bumped version to 1.8.0